<resources>
    <string name="app_name">Instagram</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="profile_photo">Change profile photo</string>
    <string name="set_profile">Set as profile photo</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log out</string>
    <string name="bt_sign_up">Don\'t have an account? Sign up.</string>
    <string name="bt_create_account">Create account</string>
    <string name="post_username">Username</string>
    <string name="post_description">Description</string>
    <string name="post_handle">Handle</string>
    <string name="post_created">CreatedAt</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_compose">Compose</string>
    <string name="bottom_menu_profile">Profile</string>
    <string name="comment_title">Comments</string>
    <string name="comment_add">Add Comment</string>
    <string name="comment_username">Username</string>
    <string name="comment_description">Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
